--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 ::selection {
   user-select:none;
 }
+
 /* Navbar Styling */
 .navbar {
   color:white;
@@ -34,7 +35,6 @@
   background-color:#F2CC0F;
   color:#000 !important;
 }
-
 
 /* Home page styling */
 .home-head {
@@ -66,7 +66,7 @@ height:100vh;
   color:white;
   font-size:40px;
 }
-.moment-button, .subscribe {
+.moment-button, .subscribe, .error-bot {
   border:none;
   color:#000;
   border-radius:5px;
@@ -89,7 +89,6 @@ height:100vh;
 }
 
 /* Styling the memory card inside home page */
-
 .memory {
   display:flex;
   flex-direction:column;
@@ -205,13 +204,6 @@ height:100vh;
 form {
   padding:30px 0px;
 }
-/* label {
-  display:block;
-  color:#481f47;
-  font-weight:bold;
-  font-size:18px;
-  margin:5px 0px 0px;
-} */
 input, textarea {
   font-size:16px;
   width:100%;   
@@ -219,7 +211,6 @@ input, textarea {
   border:none;
   border-radius:5px;
   background-color:#ffffffcc;
-  /* border-bottom:1px solid #fff; */
   margin:5px 0px;
   color:rgb(103, 95, 95);
 }
@@ -240,7 +231,6 @@ form button {
 }
 
 /* details page styling */
-
 .details-section {
   background:
             linear-gradient(rgba(199, 67, 226, 0.63), rgba(193, 51, 155, 0.619)),
@@ -248,7 +238,6 @@ form button {
   background-size:cover;
   height:100vh;
 }
-
 .img-card {
   background-color:white;
   padding:20px 20px 40px;
@@ -310,13 +299,12 @@ form button {
 /* About section styling */
 .about-section {
   background:
-  linear-gradient(rgba(199, 67, 226, 0.5), rgba(193, 51, 155, 0.5)),
+  linear-gradient(rgba(199, 67, 226, 0.6), rgba(193, 51, 155, 0.619)),
   url("https://img.freepik.com/free-photo/girl-taking-photo-her-friends-group-young-friends-hiking-through-forest-travel-hiking-adventure-concept_613910-18677.jpg?t=st=1734004415~exp=1734008015~hmac=c4a0ceda99b4615e3165f5dd9914098c1761d42893846e0d0dfb5afce1408fcf&w=740");
   background-size:cover;
   height:100vh;
   font-family:sans-serif;
 }
-
 .about-us img {
   height:190px;
   float:left;
@@ -352,7 +340,6 @@ form button {
 }
 
 /* Thanks section styling */
-
 .thanks {
   background-color:rgb(207, 196, 196, 0.5);
   height:200px;
@@ -371,4 +358,29 @@ form button {
   border:none;
   cursor:pointer;
   font-size:15px;
+}
+
+/* error styling */
+.error-bg {
+  background:linear-gradient(rgba(186, 200, 189, 0.5),rgba(169, 157, 143, 0.5));
+  height:100vh;
+  background-size:cover;
+}
+.error-cart {
+  height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
+.index {
+  position:absolute;
+  top:20%;
+  z-index:1;
+  text-align:center;
+}
+.index p {
+  font-size:20px;
+}
+.index h1 {
+  font-size:75px;
 }
